--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
 	"main": "simplerpc.js",
 	"format": "es6",
   	"registry": "jspm",
-	"devDependencies": {
-	      "babel": "npm:babel-core@^5.8.24",
-	      "babel-runtime": "npm:babel-runtime@^5.8.24",
-	      "core-js": "npm:core-js@^1.1.4"
-    }
+	"jspm": {
+		"devDependencies": {
+		      "babel": "npm:babel-core@^5.8.24",
+		      "babel-runtime": "npm:babel-runtime@^5.8.24",
+		      "core-js": "npm:core-js@^1.1.4"
+	    }
+	}
 }
